--- a/public/assets/css/dashlite.rtl.css
+++ b/public/assets/css/dashlite.rtl.css
@@ -10211,7 +10211,7 @@ body.nav-shown { overflow: hidden; }
 
 .nk-header.is-theme:not([class*=bg-]) { background: #0a2d6c; border-color: #0f419a; }
 
-.nk-header-fixed { position: fixed; top: 0; left: 0; right: 0; z-index: 800; min-width: 320px; }
+.nk-header-fixed { position: sticky; top: 0; left: 0; right: 0; z-index: 800; min-width: 320px; }
 
 .nk-header-fixed + .nk-content { margin-top: 65px; position: relative; }
 
