--- a/src/App.css
+++ b/src/App.css
@@ -34,46 +34,45 @@
     transform: rotate(360deg);
   }
 }
-.metro{
-    height: 45px;
-    border: none;
-    border-radius: 4px;
-    background-color: white;
-    box-shadow: 1px 1px 1px 1px grey;
-    background-color: #4267B2;
-    color: white;
+.metro {
+  height: 45px;
+  border: none;
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: 1px 1px 1px 1px grey;
+  background-color: #4267b2;
+  color: white;
 }
-.passvalid{
+.passvalid {
   font-size: 10px;
   padding-bottom: -14px;
 }
-div h6{
+div h6 {
   margin-bottom: -10px;
 }
-#validation-box, h6{
+#validation-box,
+h6 {
   padding-top: 10px;
-
 }
-#validation-box{
-display: none;
+#validation-box {
+  display: none;
 }
-.valid{
+.valid {
   color: green;
 }
-.valid:before{
+.valid:before {
   position: relative;
   /* content: url(true.png); */
-
 }
-.invalid{
+.invalid {
   color: red;
 }
-.invalid::before{
+.invalid::before {
   position: relative;
   /* content: url(false.png); */
 }
-.referal{
-  margin-top: 13X;
+.referal {
+  margin-top: 13x;
 }
 /* .card-stretch{
   margin:10px 100px;
@@ -83,13 +82,12 @@ display: none;
   margin: 0px 100px;
   padding: 0px;
 } */
-@media (min-width: 992px){
-.nk-auth-container {
+@media (min-width: 992px) {
+  .nk-auth-container {
     width: 35%;
+  }
 }
-
-}
-.react-slideshow-container{
+.react-slideshow-container {
   margin-left: 32px;
   align-self: center;
   text-align: center;
@@ -97,253 +95,235 @@ display: none;
   align-items: center;
   height: 404px;
 }
-@media (max-width:450px){
-  .dropdown{
+@media (max-width: 450px) {
+  .dropdown {
     position: relative;
     right: 40px;
+  }
+  .energy {
+    /* margin-top: 15px; */
+    padding-top: -20px;
+  }
+  .nk-block-tools {
+    right: 90px;
+  }
+  .energy-text {
+    font-size: 12px;
+  }
+  .nk-block-head-content {
+    /* height: 20%; */
+    width: 65%;
+  }
+  .timer {
+    font-size: 12px;
+    width: 35px;
+  }
+  .energy-container {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    padding: 0px 0 0 27px;
+  }
 }
-.energy{
-  /* margin-top: 15px; */
-  padding-top: -20px;
-} 
-.nk-block-tools{
-     right: 90px;
-}
-.energy-text{
-font-size: 12px;
-}
-.nk-block-head-content{
-  /* height: 20%; */
-  width: 65%;
-}
-.timer{
-  font-size: 12px;
-  width:35px
-}
-.energy-container{
-  width: 80%;
-  display: flex;
-  align-items: center;
-  padding: 0px 0 0 27px;
-}
-}
-@media (max-width:380px){
-  .dropdown{
+@media (max-width: 380px) {
+  .dropdown {
     right: 100px;
+  }
+  .nk-block-head-content {
+    right: 150px;
+  }
 }
-.nk-block-head-content{
-  right: 150px;
-}
-}
-.first-card{
+.first-card {
   width: 85%;
   margin: auto;
 }
-.first-card:hover{
-  transform:scale(1.02,1.02)
+.first-card:hover {
+  transform: scale(1.02, 1.02);
 }
-@media(max-width:460px){
-
-  .first-card{
+@media (max-width: 460px) {
+  .first-card {
     width: 93%;
   }
-  .nk-block-head-content{
+  .nk-block-head-content {
     right: 100px;
- }
- .react-multiple-carousel__arrow {
-  display: none;
-} 
+  }
+  .react-multiple-carousel__arrow {
+    display: none;
+  }
 }
-@media (max-width:383px){
+@media (max-width: 383px) {
   .nk-quick-nav > li {
     /* padding: 0 6px; */
     right: 86px;
+  }
+  .nk-block-head-content {
+    right: 36px;
+  }
+  .react-multiple-carousel__arrow {
+    display: none;
+  }
 }
-.nk-block-head-content{
-  right: 36px;
-} 
-.react-multiple-carousel__arrow {
-  display: none;
-}
-}
-@media (max-width:360px){
+@media (max-width: 360px) {
   .nk-quick-nav > li {
     /* padding: 0 6px; */
     right: 70px;
+  }
+  .react-multiple-carousel__arrow {
+    display: none;
+  }
+  .nk-block-head-content {
+    right: 36px;
+  }
 }
-.react-multiple-carousel__arrow {
-  display: none;
-}
-.nk-block-head-content{
-  right: 36px;
-} 
-}
-@media (max-width:375px){
+@media (max-width: 375px) {
   .nk-quick-nav > li {
     right: 50px;
+  }
+  .nk-block-head-content {
+    right: 36px;
+  }
+  .countdown {
+    padding-left: 90px !important;
+    /* padding-top: 30px; */
+  }
+  .duration {
+    padding-left: 150px !important;
+  }
+  .react-multiple-carousel__arrow {
+    display: none;
+  }
 }
-.nk-block-head-content{
-  right: 36px;
-} 
-.countdown{
-  padding-left: 90px !important;
-  /* padding-top: 30px; */
-}
-.duration{
-  padding-left: 150px!important;
-}
-.react-multiple-carousel__arrow {
-  display: none;
-}
-
-
-
-}
-@media (max-width:377px){
+@media (max-width: 377px) {
   .nk-quick-nav > li {
     /* padding: 0 6px; */
     right: 50px;
+  }
+  .nk-block-head-content {
+    right: 36px;
+  }
+  .react-multiple-carousel__arrow {
+    display: none;
+  }
 }
-.nk-block-head-content{
-  right: 36px;
-} 
-.react-multiple-carousel__arrow {
-  display: none;
-}
-}
-@media (max-width:379px){
+@media (max-width: 379px) {
   .nk-quick-nav > li {
     /* padding: 0 6px; */
     right: 50px;
-}
-.nk-block-head-content{
-  right: 36px;
-} 
-}
-@media (max-width:390px){
-  .react-multiple-carousel__arrow {
-    display: none;
-}
-.duration{
-  padding-left: 90px !important;
-}
-.countdown{
-  /* padding-left: 100px !important; */
-  margin-left: 40px;
- 
-}
-.coinqty{
-  width: 192px !important;
-}
-}
-@media (max-width:415px){
-  .react-multiple-carousel__arrow {
-    display: none;
-}
-.countdown{
-  padding-left: 290px ;
-}
-.duration{
-  padding-left:100px !important;
-}
-.nk-quick-nav > li {
-  right: 50px;
-}
-}
-@media (max-width:378px){
-  .duration{
-    padding-left:87px !important;
-}
-.countdown{
-  padding-left: 200px !important;
-}
-}
-@media (max-width:426px){
-  .react-multiple-carousel__arrow {
-    display: none;
-}
-.countdown{
-  padding-left: 100px !important;
- 
-}
-}
-
-@media (max-width:1714px){
-  .duration{
-    padding-left:90px !important;
   }
-  .countdown{
-    padding-left: 247px !important;
-   
+  .nk-block-head-content {
+    right: 36px;
   }
-  .coinqty{
+}
+@media (max-width: 390px) {
+  .react-multiple-carousel__arrow {
+    display: none;
+  }
+  .duration {
+    padding-left: 90px !important;
+  }
+  .countdown {
+    /* padding-left: 100px !important; */
+    margin-left: 40px;
+  }
+  .coinqty {
     width: 192px !important;
   }
 }
-@media (max-width:1025px){
-  .duration{
-    padding-left:60px !important;
+@media (max-width: 415px) {
+  .react-multiple-carousel__arrow {
+    display: none;
   }
-  .countdown{
-    padding-left: 247px !important;
-   
+  .countdown {
+    padding-left: 290px;
+  }
+  .duration {
+    padding-left: 100px !important;
+  }
+  .nk-quick-nav > li {
+    right: 50px;
   }
 }
-@media (max-width:847px){
-  .countdown{
+@media (max-width: 378px) {
+  .duration {
+    padding-left: 87px !important;
+  }
+  .countdown {
     padding-left: 200px !important;
-   
   }
 }
-@media (max-width:441px){
-  .countdown{
-    padding-left: 270px ;
+@media (max-width: 426px) {
+  .react-multiple-carousel__arrow {
+    display: none;
   }
-  .duration{
-    padding-left:120px ;
+  .countdown {
+    padding-left: 100px !important;
+  }
+}
+
+@media (max-width: 1714px) {
+  .duration {
+    padding-left: 90px !important;
+  }
+  .countdown {
+    padding-left: 247px !important;
+  }
+  .coinqty {
+    width: 192px !important;
+  }
+}
+@media (max-width: 1025px) {
+  .duration {
+    padding-left: 60px !important;
+  }
+  .countdown {
+    padding-left: 247px !important;
+  }
+}
+@media (max-width: 847px) {
+  .countdown {
+    padding-left: 200px !important;
+  }
+}
+@media (max-width: 441px) {
+  .countdown {
+    padding-left: 270px;
+  }
+  .duration {
+    padding-left: 120px;
   }
   .nk-quick-nav > li {
     right: 40px;
   }
 }
 
-@media (max-width:820px){
-  .countdown{
+@media (max-width: 820px) {
+  .countdown {
     padding-left: 520px !important;
   }
-  .duration{
-    padding-left:200px !important;
+  .duration {
+    padding-left: 200px !important;
   }
   .nk-quick-nav > li {
     right: 10px;
   }
 }
-@media (max-width:912px){
-  .countdown{
+@media (max-width: 912px) {
+  .countdown {
     padding-left: 630px !important;
   }
-  .duration{
-    padding-left:280px !important;
+  .duration {
+    padding-left: 280px !important;
   }
   .nk-quick-nav > li {
     right: 10px;
   }
 }
-<<<<<<< HEAD
-=======
-
-
-
-
-
-
->>>>>>> origin/amit_frontend
-.countdown{
-  padding-left: 290px ;
- padding-top: 10px;
+.countdown {
+  padding-left: 290px;
+  padding-top: 10px;
 }
 
 .btn-outline-light {
-  color:black; 
-  border-color:black;
+  color: black;
+  border-color: black;
 }
