--- a/public/assets/css/dashlite.rtl.css
+++ b/public/assets/css/dashlite.rtl.css
@@ -10164,7 +10164,7 @@ body.nav-shown { overflow: hidden; }
 
 .nk-main { position: relative; }
 
-.nk-wrap { display: flex; flex-direction: column; min-height: 100vh; }
+.nk-wrap { display: flex; flex-direction: column; min-height: 80%; }
 
 .nk-content { padding: 24px 4px; }
 
@@ -10181,7 +10181,7 @@ body.nav-shown { overflow: hidden; }
 
 .nk-content-body { flex-grow: 1; }
 
-.nk-wrap-nosidebar .nk-content { padding: 0 !important; min-height: 100vh; display: flex; flex-direction: column; }
+.nk-wrap-nosidebar .nk-content { padding: 0 !important; min-height: 80%; display: flex; flex-direction: column; }
 
 .logo-link { position: relative; display: inline-block; align-items: center; }
 
