--- a/src/App.css
+++ b/src/App.css
@@ -352,3 +352,41 @@ h6 {
 .btn-trigger{
   padding: 0px 4px !important;
 }
+
+
+/* Graph Code  */
+
+/* .coinsfather-theme-color, .theme-color, #vertical_tab_nav {
+  background: #FFF;
+  color: #363537;
+  font-family: Tahoma,Helvetica,Arial,Roboto,sans-serif;
+  -webkit-transition: all 0.50s linear;
+  transition: all 0.50s linear;
+}*/
+
+/* .kZeBBS {
+  display: flex;
+  flex-shrink: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  flex-direction: row-reverse;
+   background-color: rgb(22,26,30); 
+  margin: 0px 0px; 
+}  */
+
+/* body {
+  margin: 0;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #eee;
+  text-align: left;
+  background-color: #fff;
+}
+
+.lmEScu {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+  flex-shrink: 0;
+}  */
