--- a/src/App.css
+++ b/src/App.css
@@ -82,10 +82,17 @@ h6 {
   margin: 0px 100px;
   padding: 0px;
 } */
-@media (min-width: 992px) {
+@media (max-width: 992px) {
   .nk-auth-container {
     width: 35%;
   }
+  .countdown {
+    padding-left: 270px ;
+  }
+  .duration2 {
+    padding-left: 100px !important ;
+  }
+
 }
 .react-slideshow-container {
   margin-left: 32px;
@@ -189,11 +196,11 @@ h6 {
     right: 36px;
   }
   .countdown {
-    padding-left: 90px !important;
+    padding-left: 90px ;
     /* padding-top: 30px; */
   }
   .duration {
-    padding-left: 150px !important;
+    padding-left: 150px ;
   }
   .react-multiple-carousel__arrow {
     display: none;
@@ -236,7 +243,7 @@ h6 {
     display: none;
   }
   .duration {
-    padding-left: 90px !important;
+    padding-left: 90px ;
   }
   .countdown {
     /* padding-left: 100px !important; */
@@ -254,7 +261,7 @@ h6 {
     padding-left: 290px;
   }
   .duration {
-    padding-left: 100px !important;
+    padding-left: 100px ;
   }
   .nk-quick-nav > li {
     right: 50px;
@@ -262,10 +269,10 @@ h6 {
 }
 @media (max-width: 378px) {
   .duration {
-    padding-left: 87px !important;
+    padding-left: 87px;
   }
   .countdown {
-    padding-left: 200px !important;
+    padding-left: 200px ;
   }
 }
 @media (max-width: 426px) {
@@ -273,32 +280,32 @@ h6 {
     display: none;
   }
   .countdown {
-    padding-left: 100px !important;
+    padding-left: 100px ;
   }
 }
 
-@media (max-width: 1714px) {
+@media (max-width: 1700px) {
   .duration {
-    padding-left: 90px !important;
+    padding-left: 88px ;
   }
   .countdown {
-    padding-left: 247px !important;
+    padding-left: 247px ;
   }
-  .coinqty {
+  /* .coinqty {
     width: 192px !important;
-  }
+  } */
 }
 @media (max-width: 1025px) {
   .duration {
-    padding-left: 60px !important;
+    padding-left: 60px ;
   }
   .countdown {
-    padding-left: 247px !important;
+    padding-left: 247px ;
   }
 }
 @media (max-width: 847px) {
   .countdown {
-    padding-left: 200px !important;
+    padding-left: 200px ;
   }
 }
 @media (max-width: 441px) {
@@ -315,10 +322,10 @@ h6 {
 
 @media (max-width: 820px) {
   .countdown {
-    padding-left: 520px !important;
+    padding-left: 520px;
   }
   .duration {
-    padding-left: 200px !important;
+    padding-left: 200px ;
   }
   .nk-quick-nav > li {
     right: 10px;
@@ -326,17 +333,34 @@ h6 {
 }
 @media (max-width: 912px) {
   .countdown {
-    padding-left: 630px !important;
+    padding-left: 630px ;
   }
   .duration {
-    padding-left: 280px !important;
+    padding-left: 280px ;
   }
   .nk-quick-nav > li {
     right: 10px;
   }
 }
+
+@media (max-width: 1200px) {
+  .countdown {
+    padding-left: 107px ;
+  }
+  .duration {
+    padding-left: 35px ;
+  }
+  /* .nk-quick-nav > li {
+    right: 10px;
+  } */
+}
+
+
+
+
+
 .countdown {
-  padding-left: 290px;
+  /* padding-left: 290px; */
   padding-top: 10px;
 }
 
@@ -354,39 +378,11 @@ h6 {
 }
 
 
-/* Graph Code  */
+/* Order  Buy Sell*/
 
-/* .coinsfather-theme-color, .theme-color, #vertical_tab_nav {
-  background: #FFF;
-  color: #363537;
-  font-family: Tahoma,Helvetica,Arial,Roboto,sans-serif;
-  -webkit-transition: all 0.50s linear;
-  transition: all 0.50s linear;
-}*/
+@media (max-width: 393px) {
 
-/* .kZeBBS {
-  display: flex;
-  flex-shrink: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-  flex-direction: row-reverse;
-   background-color: rgb(22,26,30); 
-  margin: 0px 0px; 
-}  */
-
-/* body {
-  margin: 0;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #eee;
-  text-align: left;
-  background-color: #fff;
+  .order{
+    margin-top: 20px;
+  }
 }
-
-.lmEScu {
-  display: flex;
-  justify-content: space-between;
-  flex-grow: 1;
-  flex-shrink: 0;
-}  */
