--- a/src/App.css
+++ b/src/App.css
@@ -87,12 +87,9 @@ h6 {
     width: 35%;
   }
   .countdown {
-    padding-left: 270px ;
+    padding-left: 270px;
   }
-  .duration2 {
-    padding-left: 100px !important ;
-  }
-
+ 
 }
 .react-slideshow-container {
   margin-left: 32px;
@@ -107,7 +104,7 @@ h6 {
     position: relative;
     right: 40px;
   }
-  .dropMenu{
+  .dropMenu {
     right: 0px !important;
   }
   .energy {
@@ -139,7 +136,7 @@ h6 {
   .dropdown {
     right: 100px;
   }
-  .dropMenu{
+  .dropMenu {
     right: 0px !important;
   }
   .nk-block-head-content {
@@ -196,26 +193,25 @@ h6 {
     right: 36px;
   }
   .countdown {
-    padding-left: 90px ;
+    padding-left: 90px;
     /* padding-top: 30px; */
   }
   .duration {
-    padding-left: 150px ;
+    padding-left: 150px;
   }
   .react-multiple-carousel__arrow {
     display: none;
   }
-  .input-group{
+  .input-group {
     margin-left: 33px;
   }
-  .affiliates{
+  .affiliates {
     direction: rtl;
-   margin-right: -33px;
+    margin-right: -33px;
   }
-  .dropMenu{
+  .dropMenu {
     right: -10px !important;
   }
-  
 }
 @media (max-width: 377px) {
   .nk-quick-nav > li {
@@ -243,7 +239,7 @@ h6 {
     display: none;
   }
   .duration {
-    padding-left: 90px ;
+    padding-left: 90px;
   }
   .countdown {
     /* padding-left: 100px !important; */
@@ -261,7 +257,7 @@ h6 {
     padding-left: 290px;
   }
   .duration {
-    padding-left: 100px ;
+    padding-left: 100px;
   }
   .nk-quick-nav > li {
     right: 50px;
@@ -272,7 +268,7 @@ h6 {
     padding-left: 87px;
   }
   .countdown {
-    padding-left: 200px ;
+    padding-left: 200px;
   }
 }
 @media (max-width: 426px) {
@@ -280,16 +276,16 @@ h6 {
     display: none;
   }
   .countdown {
-    padding-left: 100px ;
+    padding-left: 100px;
   }
 }
 
 @media (max-width: 1700px) {
   .duration {
-    padding-left: 88px ;
+    padding-left: 88px;
   }
   .countdown {
-    padding-left: 247px ;
+    padding-left: 247px;
   }
   /* .coinqty {
     width: 192px !important;
@@ -297,15 +293,15 @@ h6 {
 }
 @media (max-width: 1025px) {
   .duration {
-    padding-left: 60px ;
+    padding-left: 60px;
   }
   .countdown {
-    padding-left: 247px ;
+    padding-left: 247px;
   }
 }
 @media (max-width: 847px) {
   .countdown {
-    padding-left: 200px ;
+    padding-left: 200px;
   }
 }
 @media (max-width: 441px) {
@@ -325,7 +321,7 @@ h6 {
     padding-left: 520px;
   }
   .duration {
-    padding-left: 200px ;
+    padding-left: 200px;
   }
   .nk-quick-nav > li {
     right: 10px;
@@ -333,10 +329,10 @@ h6 {
 }
 @media (max-width: 912px) {
   .countdown {
-    padding-left: 630px ;
+    padding-left: 630px;
   }
   .duration {
-    padding-left: 280px ;
+    padding-left: 280px;
   }
   .nk-quick-nav > li {
     right: 10px;
@@ -345,19 +341,15 @@ h6 {
 
 @media (max-width: 1200px) {
   .countdown {
-    padding-left: 107px ;
+    padding-left: 16px;
   }
   .duration {
-    padding-left: 35px ;
+    padding-left: 6px;
   }
   /* .nk-quick-nav > li {
     right: 10px;
   } */
 }
-
-
-
-
 
 .countdown {
   /* padding-left: 290px; */
@@ -369,32 +361,25 @@ h6 {
   border-color: black;
 }
 
-.ni-more-h{
-  padding: 0px 0px  ;
+.ni-more-h {
+  padding: 0px 0px;
 }
 
-.btn-trigger{
+.btn-trigger {
   padding: 0px 4px !important;
 }
-
 
 /* Order  Buy Sell*/
 
 @media (max-width: 393px) {
-
-  .order{
+  .order {
     margin-top: 20px;
   }
 }
 
-
 /* Order Progress Bar  */
 
-
-
-
-
-.Orderprogress{
+.Orderprogress {
   margin-top: 40px;
 }
 
@@ -402,8 +387,8 @@ h6 {
   margin-top: 10px;
 }
 
-
-.noUi-target,.noUi-target * {
+.noUi-target,
+.noUi-target * {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -ms-touch-action: none;
@@ -425,7 +410,6 @@ h6 {
   height: 100%;
   position: relative;
   z-index: 1;
-
 }
 
 .noUi-origin {
@@ -442,25 +426,23 @@ h6 {
 }
 
 .noUi-stacking .noUi-handle {
-
   z-index: 10;
 }
 
 .noUi-state-tap .noUi-origin {
-  -webkit-transition: left 0.3s,top .3s;
-  transition: left 0.3s,top .3s;
+  -webkit-transition: left 0.3s, top 0.3s;
+  transition: left 0.3s, top 0.3s;
 }
 
 .noUi-state-drag * {
   cursor: inherit !important;
 }
 
-
-.noUi-base,.noUi-handle {
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
+.noUi-base,
+.noUi-handle {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
-
 
 .noUi-horizontal {
   height: 4px;
@@ -471,16 +453,15 @@ h6 {
   height: 18px;
   border-radius: 50%;
   left: -7px;
-  background-color: #345DBB;
+  background-color: #345dbb;
 }
 
-
 .noUi-background {
-  background: #D6D7D9;
+  background: #d6d7d9;
 }
 
 .noUi-connect {
-  background: #345DBB;
+  background: #345dbb;
   -webkit-transition: background 450ms;
   transition: background 450ms;
 }
@@ -492,9 +473,6 @@ h6 {
 .noUi-target {
   border-radius: 2px;
 }
-
-
-
 
 .noUi-draggable {
   cursor: w-resize;
@@ -512,31 +490,32 @@ h6 {
 }
 
 .noUi-handle:active {
-  border: 8px solid #345DBB;
-  border: 8px solid rgba(53,93,187,0.38);
+  border: 8px solid #345dbb;
+  border: 8px solid rgba(53, 93, 187, 0.38);
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   left: -14px;
   top: -10px;
 }
 
-
-[disabled].noUi-connect,[disabled] .noUi-connect {
-  background: #B8B8B8;
+[disabled].noUi-connect,
+[disabled] .noUi-connect {
+  background: #b8b8b8;
 }
 
-[disabled].noUi-origin,[disabled] .noUi-handle {
+[disabled].noUi-origin,
+[disabled] .noUi-handle {
   cursor: not-allowed;
 }
 
-                                                  /* Progress Bar  */
-                                                  * {
-                                                    box-sizing: border-box;
-                                                    margin: 0;
-                                                    padding: 0;
-                                                  }
-                                                  
-                                                  body {
-                                                    background-color: #242526;
-                                                    font-family: sans-serif;
-                                                  }
+/* Progress Bar  */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #242526;
+  font-family: sans-serif;
+}
