--- a/src/components/order.css
+++ b/src/components/order.css
@@ -41,142 +41,133 @@
 }
 
 @media only screen and (min-width: 1800px) and (max-width: 1819px) {
-       .OrderhistorySize{
-         font-size: 9px;
-       }
+  .OrderhistorySize {
+    font-size: 9px;
+  }
 }
 
 @media only screen and (min-width: 1501px) and (max-width: 1800px) {
-  .p-3{
+  .p-3 {
     max-width: 350px;
-       }
-   .OrderhistorySize{
-         font-size: 8px;
-       }
-       .TradeHistorySize{
-        font-size: 12px;
-         
-      }
+  }
+  .OrderhistorySize {
+    font-size: 8px;
+  }
+  .TradeHistorySize {
+    font-size: 12px;
+  }
+  /* .thumb--right {
+    right: 60px;
+  }
+  .thumb--left {
+    left: 30px;
+  } */
 }
 @media only screen and (min-width: 1200px) and (max-width: 1500px) {
-  .p-3{
+  .p-3 {
     max-width: 320px;
-       }
-       .historyorder{
-         font-size: 10px;
-         width: 20%;
-       }
-       .OrderHistoryHedding{
-          font-size: 8px;
-         width: 25%;
-       }
-       .TradeHistorySize{
-        font-size: 10px;
-          /* width: 20%; */
-      }
-      .OrderhistorySize{
-        font-size:7.5px;
-        padding: 0px !important;
-       
-      }
-      .img{
-        width: 10px
-      }
-      .OrderHistoryContainer{
-        height: 330px;
-      }
+  }
+  .historyorder {
+    font-size: 10px;
+    width: 20%;
+  }
+  .OrderHistoryHedding {
+    font-size: 8px;
+    width: 25%;
+  }
+  .TradeHistorySize {
+    font-size: 10px;
+    /* width: 20%; */
+  }
+  .OrderhistorySize {
+    font-size: 7.5px;
+    padding: 0px !important;
+  }
+  .img {
+    width: 10px;
+  }
+  .OrderHistoryContainer {
+    height: 330px;
+  }
 }
 @media only screen and (min-width: 1000px) and (max-width: 1199px) {
-  .p-3{
+  .p-3 {
     max-width: 330px;
-       }
-       .OrderhistorySize{
-        font-size: 8.5px;
-      }
-      .TradeHistorySize{
-        font-size: 12px;
-      }
-      .historyorder{
-        font-size: 12px;
-    }
-    .OrderHistoryHedding{
-      font-size: 8px;
-   
-   }
-   .thumb--right{
+  }
+  .OrderhistorySize {
+    font-size: 8.5px;
+  }
+  .TradeHistorySize {
+    font-size: 12px;
+  }
+  .historyorder {
+    font-size: 12px;
+  }
+  .OrderHistoryHedding {
+    font-size: 8px;
+  }
+  .thumb--right {
     right: 32px;
   }
-  .thumb--left{
+  .thumb--left {
     left: 32px;
   }
- 
 }
 @media only screen and (min-width: 992px) and (max-width: 1000px) {
-  .p-3{
-    max-width:310px;
-       }
+  .p-3 {
+    max-width: 310px;
+  }
 
-       .thumb--right{
-         right: 44px;
-       }
-       .thumb--left{
-         left: 44px;
-       }
-      
-
+  .thumb--right {
+    right: 44px;
+  }
+  .thumb--left {
+    left: 44px;
+  }
 }
-
-
-
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .p-3{
-    max-width:500px;
-       }
-       .OrderhistorySize{
-        font-size: 23px;
-      }
-      .order{
-        background: none !important;
-      }
-
+  .p-3 {
+    max-width: 500px;
+  }
+  .OrderhistorySize {
+    font-size: 23px;
+  }
+  .order {
+    background: none !important;
+  }
 }
 @media only screen and (min-width: 500px) and (max-width: 875px) {
-  .historyorder{
-      font-size: 12px;
+  .historyorder {
+    font-size: 12px;
   }
-  .OrderhistorySize{
+  .OrderhistorySize {
     font-size: 18px;
   }
-  .p-3{
-    max-width:580px;
-       }
+  .p-3 {
+    max-width: 580px;
+  }
 }
 
 @media only screen and (min-width: 400px) and (max-width: 693px) {
-  .TradeHistorySize{
+  .TradeHistorySize {
     font-size: 8.5px;
-      
   }
-  .OrderhistorySize{
+  .OrderhistorySize {
     font-size: 13px;
   }
 }
 
 @media only screen and (min-width: 300px) and (max-width: 575px) {
-  .p-3{
-    max-width:345px;
-       }
-       .order{
-         background: none !important;
-       }
+  .p-3 {
+    max-width: 345px;
+  }
+  .order {
+    background: none !important;
+  }
 }
 
-
-
-
-
-.order_cont:hover{
+.order_cont:hover {
   transform: scaleY(1.1);
   /* box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
   0 6.7px 5.3px rgba(0, 0, 0, 0.048),
@@ -187,17 +178,12 @@
   font-weight: bold;
 }
 
-
-
-.zoom:hover{
+.zoom:hover {
   transform: scaleY(1.1);
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-  0 2.5px 1px rgba(0, 0, 0, 0.06),
-  0 2.3px 7.9px rgba(0, 0, 0, 0.072);
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 2.5px 1px rgba(0, 0, 0, 0.06),
+    0 2.3px 7.9px rgba(0, 0, 0, 0.072);
   /* 0 4.8px 3.4px rgba(0, 0, 0, 0.086),
   0 10px 8px rgba(0, 0, 0, 0.12); */
   overflow-y: hidden;
-  
 }
-
