--- a/src/components/multiRangeSlider/MultiRangeSlider.css
+++ b/src/components/multiRangeSlider/MultiRangeSlider.css
@@ -2,7 +2,12 @@
     /* height: 100vh; */
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
+  }
+  .screenfix:after{
+    content:"";
+    display:block;
+    clear:both;
   }
   
   .slider {
