--- a/src/components/order.css
+++ b/src/components/order.css
@@ -65,7 +65,7 @@
 }
 @media only screen and (min-width: 1200px) and (max-width: 1500px) {
   .p-3 {
-    max-width: 320px;
+    max-width: 270px;
   }
   .historyorder {
     font-size: 10px;
@@ -106,24 +106,24 @@
   .OrderHistoryHedding {
     font-size: 8px;
   }
-  .thumb--right {
+  /* .thumb--right {
     right: 32px;
   }
   .thumb--left {
     left: 32px;
-  }
+  } */
 }
 @media only screen and (min-width: 992px) and (max-width: 1000px) {
   .p-3 {
     max-width: 310px;
   }
 
-  .thumb--right {
+  /* .thumb--right {
     right: 44px;
   }
   .thumb--left {
     left: 44px;
-  }
+  } */
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
