--- a/src/App.css
+++ b/src/App.css
@@ -519,3 +519,13 @@ body {
   background-color: #242526;
   font-family: sans-serif;
 }
+
+/* .css-79elbk {
+  width: 100%;
+  height: 100%;
+  z-index: 1000 !important;
+}
+
+ ._loading_overlay_wrapper{
+z-index: 1000;
+} */
