--- a/src/components/multiRangeSlider/MultiRangeSlider.css
+++ b/src/components/multiRangeSlider/MultiRangeSlider.css
@@ -12,7 +12,7 @@
   
   .slider {
     position: relative;
-    width: 400px;
+    width: 100%;
   }
   
   .slider__track,
@@ -66,7 +66,7 @@
     pointer-events: none;
     position: absolute;
     height: 0;
-    width: 400px;
+    width: 420px;
     outline: none;
   }
   
@@ -75,7 +75,7 @@
   }
   
   .thumb--right {
-    z-index: 4;
+    z-index: 3;
   }
   
   /* For Chrome browsers */
