--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@
   height: 100vh;
   
 }
+.sidebar-bg {
+   
+  background:url("assets/sidebar-bg.png") no-repeat 0 50%;
+  background-position: center bottom;
+  
+}
 
 .link-list-menu a.active,
 .link-list-menu a:hover,
